syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.sep3.grpc";
option java_outer_classname = "CustomerServiceProto";

package proto;

service CustomerService {
  ////////////////////////////////////////////////
  rpc RegisterCustomer (RegCusReq) returns (RegCusRes);
  //////////////////////////////////////////////////
  rpc UpdateCustomerLocation(CustomerLocationRequest) returns (BusinessesInRadiusResponse);
  rpc GetCustomerLocation(CustomerByEmailRequest) returns (CustomerLocationRequest);
}
////////////////////////////
message RegCusReq {
  string email = 1;
  double latitude = 2;
  double longitude =3;
  int32 radius = 4;
}
message RegCusRes {}
//////////////////////////////


message CustomerByEmailRequest {
  string email = 1;
}

message CustomerLocationRequest {
  double latitude = 1;
  double longitude = 2;
  int32 radius = 3;
  string customerEmail=4;
}

message BusinessOnMap {
  double latitude = 1;
  double longitude = 2;
  string logoPath = 3;
  string businessName = 4;
  string businessId = 5;
  string businessEmail = 6;
}

message BusinessesInRadiusResponse {
  repeated BusinessOnMap businesses = 1;
}
